--- a/personal_details.tex
+++ b/personal_details.tex
@@ -9,7 +9,7 @@
   \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
 }{%
 \ifdefstring{\oversion}{data-engineer}{%
-  \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
+  \position{Data Engineer{\enskip\cdotp\enskip} Cloud Infrastructure \& Analytics}
 }{%
 \ifdefstring{\oversion}{dev-ops}{%
  	\position{Dev-Ops{\enskip\cdotp\enskip} IT \& Systems Professional}
@@ -23,7 +23,7 @@
 
 % \address{Toronto, Canada}
 
-\mobile{1--647--518--2894}
+\mobile{16475182894}{(+1) 647-518-2894}
 \email{mail@twdickson.com}
 %\dateofbirth{January 1st, 1970}
 \homepage{twdickson.com}
