--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -50,7 +50,6 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 \input{personal\_details.tex} % Personal Information
-\position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
 % \quote{``Be the change that you want to see in the world."}
 
 
@@ -95,15 +94,15 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am excited to apply for the Senior Data Engineer position at Jobber. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm drawn to Jobber's mission of empowering small businesses through technology. The opportunity to do meaningful work that creates real impact for people and their livelihoods strongly appeals to me.
+I am excited to apply for the Senior Data Engineer position at Jobber. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm drawn to Jobber's mission of empowering small businesses through technology. The opportunity to do meaningful work that creates real impact for people and their livelihoods strongly appeals to me. I'm equally motivated by the opportunity to use my expertise to help shape Jobber's data strategy.
 
-In my current role as Data Engineer at Ontario's Ministry of the Attorney General, I saved over \$300K annually by implementing DBT for our unified court model, directly paralleling Jobber's need for scalable ETL/ELT solutions. I've designed data warehouses supporting 150+ locations while managing sensitive data with strict compliance requirements, experience that translates well to handling Jobber's customer data at scale.
+In my current role as Data Engineer at Ontario's Ministry of the Attorney General, I modernized how we process and transform legacy and incoming court data from Ontario's 150+ courthouses. By leveraging data build tool (DBT) and Python, I've engineered a robust data platform that automates data ingestion, transformation, and validation, significantly improving data quality and maintaining analytics continuity during our 7-year system migration. This work saved the Province \$300K annually by eliminating expensive licensing costs while enabling data-driven decision making for Ontario Court operations
 
-While my cloud expertise centers on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
+While my cloud expertise centers on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR) and job scheduling (Airflow), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
 
 Leading a team of 5 at Treasury Board Secretariat, I automated critical data pipelines influencing union negotiations affecting thousands of employees, demonstrating the leadership and stakeholder communication skills essential for collaborating with Jobber's cross-functional teams. My proven track record of implementing agile methodologies and conducting code reviews shows I can contribute to Jobber's culture of innovation from day one.
 
-I'm excited about the opportunity to contribute to Jobber's data platform and learn from your team's expertise. My experience with large-scale data migrations and enabling analytics for decision-makers has shown me the value of reliable, well-designed data infrastructure in driving business outcomes.
+I'm excited to join Jobber's data platform team and collaborate closely with your data analysts, scientists, and product teams to extract actionable business insights. My background building reliable data infrastructure that supports critical business decisions aligns well with your goal of empowering internal teams to leverage data, tools, and technology effectively.
 
 Thank you for considering my application. I look forward to discussing how my transferable cloud expertise and proven leadership in data engineering can contribute to Jobber's continued growth.
 \end{cvletter}
