feat(Content): :sparkles: Override Position, new opening and closing statements

--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -50,6 +50,7 @@
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
 \input{personal\_details.tex} % Personal Information
+\position{Data Engineer{\enskip\cdotp\enskip} Cloud Infrastructure \& Analytics}
 % \quote{``Be the change that you want to see in the world."}
 
 
@@ -94,17 +95,17 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am excited to apply for the Senior Data Engineer position at Jobber. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm drawn to Jobber's mission of empowering small businesses through technology. The opportunity to do meaningful work that creates real impact for people and their livelihoods strongly appeals to me. I'm equally motivated by the opportunity to use my expertise to help shape Jobber's data strategy.
+I am excited to apply for the Senior Data Engineer position at Jobber. Having built data systems that influence multi-million dollar decisions in government, I'm ready for my next challenge of putting my skills to work for the real drivers of the economy: the small businesses that employ 47.5\% of the private labor force. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm motivated to use my expertise to help Jobber empower over 300,000 service professionals to win through technology.
 
 In my current role as Data Engineer at Ontario's Ministry of the Attorney General, I modernized how we process and transform legacy and incoming court data from Ontario's 150+ courthouses. By leveraging data build tool (DBT) and Python, I've engineered a robust data platform that automates data ingestion, transformation, and validation, significantly improving data quality and maintaining analytics continuity during our 7-year system migration. This work saved the Province \$300K annually by eliminating expensive licensing costs while enabling data-driven decision making for Ontario Court operations
 
-While my cloud expertise centers on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR) and job scheduling (Airflow), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
+While my cloud expertise centres on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR) and job scheduling (Airflow), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
 
 Leading a team of 5 at Treasury Board Secretariat, I automated critical data pipelines influencing union negotiations affecting thousands of employees, demonstrating the leadership and stakeholder communication skills essential for collaborating with Jobber's cross-functional teams. My proven track record of implementing agile methodologies and conducting code reviews shows I can contribute to Jobber's culture of innovation from day one.
 
 I'm excited to join Jobber's data platform team and collaborate closely with your data analysts, scientists, and product teams to extract actionable business insights. My background building reliable data infrastructure that supports critical business decisions aligns well with your goal of empowering internal teams to leverage data, tools, and technology effectively.
 
-Thank you for considering my application. I look forward to discussing how my transferable cloud expertise and proven leadership in data engineering can contribute to Jobber's continued growth.
+Thank you for considering my application. I'm eager to discuss how my experience building reliable data infrastructure and automating critical processes can help Jobber continue bringing people and technology together to solve the process problems that get in the way of small business success.
 \end{cvletter}
 
 
