fix(Content): :speech_balloon: Fix spelling in cv

--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -60,14 +60,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient%
-  {Data Platform Team}
-  {Jobber}
+  {Trish Quintans}
+  {Data Platform Team, Jobber}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
 \lettertitle{Job Application for Senior Data Engineer, Platform}
 % How the letter is opened
-\letteropening{Dear Hiring Manager,}
+\letteropening{Dear Trish Quintans,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -105,7 +105,7 @@ Leading a team of 5 at Treasury Board Secretariat, I automated critical data pip
 
 I'm excited to join Jobber's data platform team and collaborate closely with your data analysts, scientists, and product teams to extract actionable business insights. My background building reliable data infrastructure that supports critical business decisions aligns well with your goal of empowering internal teams to leverage data, tools, and technology effectively.
 
-Thank you for considering my application. I'm eager to discuss how my experience building reliable data infrastructure and automating critical processes can help Jobber continue bringing people and technology together to solve the process problems that get in the way of small business success.
+Thank you for considering my application. I'm eager to discuss how my experience building reliable data infrastructure and automating critical processes can help Jobber continue bringing people and technology together to solve the problems that get in the way of small business success.
 \end{cvletter}
 
 
