feat(Content): :zap: Add smaller version of experince

--- a/awesome-cv.cls
+++ b/awesome-cv.cls
@@ -649,11 +649,29 @@
   \setlength{\extrarowheight}{0pt}
   \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} L{\textwidth - 4.5cm} R{4.5cm}}
     \ifempty{#2#3}
-      {\entrypositionstyle{#1} & \entrydatestyle{#4} \\}
+      {\entrypositionstyle{#1} & \entrydatestyle{#4}}
       {\entrytitlestyle{#1} & \entrylocationstyle{#3} \\
-      \entrypositionstyle{#2} & \entrydatestyle{#4} \\}
-    \multicolumn{2}{L{\textwidth}}{\descriptionstyle{#5}}
+      \entrypositionstyle{#2} & \entrydatestyle{#4}}
+    \ifempty{#5}
+      {\\}
+      {\\ \multicolumn{2}{L{\textwidth}}{\descriptionstyle{#5}}}
   \end{tabular*}%
+}
+
+% Define a compact entry for brief experience without description
+% Usage: \cvcompactentry{<position>}{<title>}{<location>}{<date>}
+\newcommand*{\cvcompactentry}[4]{%
+  \vspace{2.0mm}
+  \setlength\tabcolsep{5pt}
+  \setlength{\extrarowheight}{-2pt}
+  \begin{tabular*}{\textwidth}{@{\extracolsep{\fill}} L{\textwidth - 4.5cm} R{4.5cm}}
+    \ifempty{#2#3}
+      {\entrypositionstyle{#1} & \entrydatestyle{#4} \\}
+      {\entrytitlestyle{#1} & \entrylocationstyle{#3} \\[-1mm]
+      \entrypositionstyle{#2} & \entrydatestyle{#4} \\}
+  \end{tabular*}%
+  \vspace{-1mm}
+  \raggedright\noindent{\color{awesome}\rule{3cm}{3pt}}
 }
 
 % Define an environment for cvsubentry
