--- a/personal_details.tex
+++ b/personal_details.tex
@@ -17,9 +17,12 @@
 \ifdefstring{\oversion}{full-stack}{%
  	 \position{Full Stack Developer{\enskip\cdotp\enskip}IT, Data \& Systems Professional}
 }{%
+\ifdefstring{\oversion}{tech-delivery-mgr}{%
+ 	 \position{Senior Technology Professional}
+}{%
 %Default
 	\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}%
-}}}}
+}}}}}
 
 % \address{Toronto, Canada}
 
