Update Application for Technology Delivery Manager, Servus CU

--- a/Taylor Dickson Cover Letter.tex
+++ b/Taylor Dickson Cover Letter.tex
@@ -49,8 +49,9 @@
 %	PERSONAL INFORMATION
 %	Comment any of the lines below if they are not required
 %-------------------------------------------------------------------------------
+\newcommand{\oversion}{tech-delivery-mgr} % Change to "data-engineer", "dev-ops", "full-stack"
 \input{personal\_details.tex} % Personal Information
-\position{Data Engineer{\enskip\cdotp\enskip} Cloud Infrastructure \& Analytics}
+% \position{Data Engineer{\enskip\cdotp\enskip} Cloud Infrastructure \& Analytics}
 % \quote{``Be the change that you want to see in the world."}
 
 
@@ -60,14 +61,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient%
-  {Trish Quintans}
-  {Data Platform Team, Jobber}
+  {Servus Credit Union}
+  {Data Technology and Infrastructure}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Senior Data Engineer, Platform}
+\lettertitle{Job Application for Technology Delivery Manager}
 % How the letter is opened
-\letteropening{Dear Trish Quintans,}
+\letteropening{Dear Sudarshan Shrinivasan,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -95,17 +96,19 @@
 %	LETTER CONTENT
 %-------------------------------------------------------------------------------
 \begin{cvletter}
-I am excited to apply for the Senior Data Engineer position at Jobber. Having built data systems that influence multi-million dollar decisions in government, I'm ready for my next challenge of putting my skills to work for the real drivers of the economy: the small businesses that employ 47.5\% of the private labor force. With 7+ years of experience building scalable data pipelines and leading teams through complex data transformations, I'm motivated to use my expertise to help Jobber empower over 300,000 service professionals to win through technology.
+I am excited to apply for the Technology Delivery Manager position at Servus Credit Union. As a Senior Technology Professional with 8+ years driving enterprise technology initiatives and cross-functional delivery coordination across Ontario government ministries, I am eager to bring my analytical expertise and delivery management experience to support Servus's mission of putting people before profits.
 
-In my current role as Data Engineer at Ontario's Ministry of the Attorney General, I modernized how we process and transform legacy and incoming court data from Ontario's 150+ courthouses. By leveraging data build tool (DBT) and Python, I've engineered a robust data platform that automates data ingestion, transformation, and validation, significantly improving data quality and maintaining analytics continuity during our 7-year system migration. This work saved the Province \$300K annually by eliminating expensive licensing costs while enabling data-driven decision making for Ontario Court operations
+In my current role as Data Engineer at the Ministry of the Attorney General, I am driving a technology modernization initiative for Ontario's court system during a critical \$160M+ migration project. By coordinating delivery across IT operations, analytics teams, and legacy mainframe specialists, I have delivered \$300K+ in annual cost savings while ensuring compliance with high security requirements. This experience managing sensitive data and complex stakeholder relationships directly aligns with the financial sector compliance and risk management expertise Servus requires.
 
-While my cloud expertise centres on Azure rather than AWS, the fundamentals are highly transferable. I've architected cloud infrastructure using Azure Data Factory (analogous to AWS Glue), managed Databricks environments (similar to EMR) and job scheduling (Airflow), and extensively used docker with docker-compose and have a background in Linux system administration. All critical skills for AWS ECS Fargate deployments. My experience with infrastructure-as-code principles, including containerization and automated deployment workflows, provides a strong foundation for adopting Terraform in AWS environments. Combined with my CI/CD practices and dimensional modelling using DBT, this experience directly aligns with your technical requirements.
+During my tenure as Senior Research Analyst/Team Lead at Treasury Board Secretariat, I led cross-ministry technology evaluation for multi-million dollar government initiatives through the Strategic Planning Process, providing strategic recommendations that influenced funding decisions across multiple ministries. Managing delivery pipelines for automation platforms affecting 60,000+ employees taught me the critical importance of stakeholder coordination, timeline management, and operational readiness—core competencies essential for Servus's hybrid cloud and infrastructure modernization initiatives.
 
-Leading a team of 5 at Treasury Board Secretariat, I automated critical data pipelines influencing union negotiations affecting thousands of employees, demonstrating the leadership and stakeholder communication skills essential for collaborating with Jobber's cross-functional teams. My proven track record of implementing agile methodologies and conducting code reviews shows I can contribute to Jobber's culture of innovation from day one.
+My experience coordinating complex technology projects across government demonstrates the cross-functional leadership and vendor management skills critical for this role. Leading a team of 5 through technology implementations while managing procurement processes and establishing quality assurance protocols has prepared me to scale delivery practices and foster the high-performance culture Servus seeks.
 
-I'm excited to join Jobber's data platform team and collaborate closely with your data analysts, scientists, and product teams to extract actionable business insights. My background building reliable data infrastructure that supports critical business decisions aligns well with your goal of empowering internal teams to leverage data, tools, and technology effectively.
+What particularly attracts me to Servus is your commitment to reinvesting in members, employees, and communities. Having spent my career in public service delivering technology solutions that benefit Ontarians, I am excited to apply my skills in an organization that shares similar values of community impact and member-focused service delivery.
 
-Thank you for considering my application. I'm eager to discuss how my experience building reliable data infrastructure and automating critical processes can help Jobber continue bringing people and technology together to solve the problems that get in the way of small business success.
+I am ready to transition my analytical background and delivery coordination experience into formal technology delivery management, bringing strategic foresight, operational excellence, and a deep understanding of balancing speed, quality, and risk management that this role demands.
+
+Thank you for considering my application. I would welcome the opportunity to discuss how my experience driving technology modernization and managing complex stakeholder relationships can contribute to Servus's continued success.
 \end{cvletter}
 
 
