--- a/Taylor Dickson Resume.tex
+++ b/Taylor Dickson Resume.tex
@@ -6,7 +6,7 @@
 % A4 paper size by default, use 'letterpaper' for US letter
 \documentclass[11pt, letterpaper]{awesome-cv}
 % Define the version here
-\newcommand{\oversion}{data-engineer} % Change to "data-engineer", "dev-ops", "full-stack"
+\newcommand{\oversion}{tech-delivery-mgr} % Change to "data-engineer", "dev-ops", "full-stack"
 
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.6cm, footskip=.5cm}
