--- a/personal_details.tex
+++ b/personal_details.tex
@@ -5,24 +5,12 @@
 % \photo{./examples/profile.png}
 \name{Taylor}{Dickson}
 
-\ifdefstring{\oversion}{software-manager}{%
-  \position{Data Engineer{\enskip\cdotp\enskip} IT \& Systems Professional}
-}{%
-\ifdefstring{\oversion}{data-engineer}{%
-  \position{Data Engineer{\enskip\cdotp\enskip} Cloud Infrastructure \& Analytics}
-}{%
-\ifdefstring{\oversion}{dev-ops}{%
- 	\position{Dev-Ops{\enskip\cdotp\enskip} IT \& Systems Professional}
-}{%
-\ifdefstring{\oversion}{full-stack}{%
- 	 \position{Full Stack Developer{\enskip\cdotp\enskip}IT, Data \& Systems Professional}
-}{%
-\ifdefstring{\oversion}{tech-delivery-mgr}{%
- 	 \position{Senior Technology Professional}
-}{%
-%Default
-	\position{Senior Research Analyst{\enskip\cdotp\enskip}IT, Data \& Systems Professional}%
-}}}}}
+% Load job-specific tagline, fallback to default
+\IfFileExists{cv/\OutputVersion/tagline.tex}{
+  \input{cv/\OutputVersion/tagline.tex}
+}{
+  \input{cv/default/tagline.tex}
+}
 
 % \address{Toronto, Canada}
 
@@ -46,3 +34,8 @@
 % \extrainfo{extra information}
 
 %\quote{``Be the change that you want to see in the world."}
+
+% Automatically create display variables
+\makeatletter
+\newcommand{\displayname}{\@firstname~\@lastname}
+\makeatother
