fix(Content): :rotating_light: Fix Linter Warnings

--- a/cv/senior_data_engineer_grand_river_hospital/cover_letter.tex
+++ b/cv/senior_data_engineer_grand_river_hospital/cover_letter.tex
@@ -1,6 +1,6 @@
 \storeletterdate{\today}
 \storerecipient{Waterloo Regional Health Network}{Human Resources Department}
-\storelettertitle{Job Application for Senior Data Engineer (Job ID: 5629)}
+\storelettertitle{Job Application for Senior Data Engineer (Job ID\: 5629)}
 \storeletteropening{Dear Hiring Manager,}
 
 \begin{storedcvletter}{
