feat(CV): Add Senior Data Developer application materials including cover letter, resume, and supporting documents

--- a/Taylor Dickson Resume.tex
+++ b/Taylor Dickson Resume.tex
@@ -8,7 +8,7 @@
 
 %--------------------------------------------------------------
 % Define the version here
-\newcommand{\OutputVersion}{senior_data_engineer_grand_river_hospital} % Change to "data-engineer", "dev-ops", "full-stack"
+\newcommand{\OutputVersion}{senior_data_developer_poka} % Change to "data-engineer", "dev-ops", "full-stack"
 %--------------------------------------------------------------
 % Configure page margins with geometry
 \geometry{left=1.4cm, top=.6cm, right=1.4cm, bottom=0.6cm, footskip=.5cm}
@@ -34,7 +34,7 @@
 % If you would like to change the social information separator from a pipe (|) to something else
 \renewcommand{\acvHeaderSocialSep}{\quad\textbar\quad}
 
-\input{personal\_details.tex} % Personal Information
+\input{personal_details.tex} % Personal Information
 
 \AtEndDocument{
   \safefilecopy{\jobname}{Upload Copies/\OutputVersion/}
