feat(Content): :construction: Experience

--- a/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/experience.tex
+++ b/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/experience.tex
@@ -8,53 +8,39 @@
 	{2024 --- Present}
 	{
 		\begin{cvitems}
-			\item Architected and built integration platform connecting legacy mainframe systems with modern cloud infrastructure, saving \$300K+ annually through automated data synchronization and API-driven workflows replacing manual processes.
-			\item Designed scalable backend services using Python to handle complex data transformations and multi-system integrations, supporting 150+ distributed locations with real-time data flow requirements.
-			\item Built robust data pipeline infrastructure on Azure cloud (Databricks, Data Factory) with focus on resilient system-to-system communication, error handling, and observability patterns applicable to AWS environments.
-			\item Led cross-functional engineering collaboration during \$160M+ platform migration, implementing agile methodologies and ensuring seamless integration between legacy and modern systems.
-			\item Established engineering best practices including Git workflows, code review processes, and automated testing standards, improving team velocity and code quality.
-			\item Mentored team members on API design patterns, distributed system architecture, and integration best practices, fostering engineering excellence culture.
+			\item Eliminated \$300K+ in annual IBM Cognos licensing costs by architecting and implementing DBT-based data platform, providing maintainable, modern solution that feeds critical reporting for government decision makers including courts and legislators throughout the 7-year, \$160M+ court system migration.
+			\item Optimized Azure cloud infrastructure (Databricks, ADF) through performance tuning and configuration management, reducing data pipeline build times and improving processing efficiency for millions of rows of court data.
+			\item Built analytics system processing judicial data from centralized court reporting systems, serving as the critical data layer that enables government decision-makers to track case flow across 150+ provincial courts.
+			\item Implemented CI/CD with Azure Dev featruing protected main branch, automated testing, and feature-based workflows, reducing senior staff workload while ensuring code quality and safe deployments.
+			\item Designed data warehouse supporting reporting across Ontario's entire court system, enabling executive and public reporting that directly informs multi-million dollar investments in court operations.
 		\end{cvitems}
 	}
 
 \cventry%
-	{Senior Backend Engineer/Team Lead}
+	{Data Engineer/Team Lead}
 	{Ontario Public Service --- Treasury Board Secretariat}
 	{Toronto, Canada}
 	{2019 --- 2024}
 	{
 		\begin{cvitems}
-			\item Designed and developed production Flask APIs serving as integration layer for internal data platform, enabling seamless data flow between multiple enterprise systems and supporting critical business operations.
-			\item Led engineering team of 5 in building scalable backend services, implementing RESTful API standards, authentication/authorization patterns, and robust error handling for mission-critical integrations.
-			\item Built complex entity resolution service using Python and NLTK, creating APIs that matched and synchronized data across disparate systems with high accuracy, reducing manual reconciliation by 90\%.
-			\item Architected cloud-native backend infrastructure on Azure, implementing microservices patterns, container orchestration, and CI/CD pipelines directly transferable to AWS ecosystem.
-			\item Developed internal platform tools with Vue.js frontend and Python/Node.js backend APIs, demonstrating full-stack capabilities while maintaining backend engineering focus.
-			\item Established API documentation standards, versioning strategies, and integration testing frameworks, ensuring maintainable and scalable platform architecture.
+			\item Developed RESTful API-based data cleaning tools using Python/Flask and Vue.js that saved weeks of manual processing for 5 users, dramatically improving data quality for critical government operations.
+			\item Led team of 5 engineers through complex organizational changes, maintaining team productivity and technical delivery despite shifting stakeholder priorities.
+			\item Architected Azure cloud infrastructure serving hundreds of internal government users, ensuring 100\% availability for critical data access and analytics operations.
+			\item Eliminated high-risk legacy MS Access databases and manual data replication previously managed by single person, creating scalable automated pipelines for multi-million dollar union contract negotiations.
+			\item Transformed unusable government data through entity resolution algorithms (Levenshtein, NLTK), making previously unworkable datasets actionable for policy and decision-making.
 		\end{cvitems}
 	}
 
 \cventry%
-	{Backend Developer --- Automation \& Integration}
+	{Workforce Analyst}
 	{Ontario Public Service --- Ministry of Government \& Consumer Services}
 	{Toronto, Canada}
 	{2017 --- 2019}
 	{
 		\begin{cvitems}
-			\item Built Python-based integration service processing 7,000+ documents across multiple systems, automating complex workflows and ensuring data consistency for province-wide initiative affecting 10,000 employees.
-			\item Developed backend automation tools integrating with multiple data sources (SQL databases, Excel, Word documents), creating unified API layer for downstream consumers and reducing manual processing by 70+ hours.
-			\item Implemented robust data validation and error handling mechanisms in integration pipelines, ensuring reliability and data integrity across interconnected systems.
-		\end{cvitems}
-	}
-
-\cventry%
-	{Systems Administrator --- Infrastructure \& DevOps}
-	{Soho VFX}
-	{Toronto, Canada}
-	{2016 --- 2017}
-	{
-		\begin{cvitems}
-			\item Managed Linux server infrastructure and automated deployment processes using shell scripting, improving system reliability and reducing deployment time for production services.
-			\item Built automation tools for system optimization and monitoring, demonstrating strong foundation in infrastructure management applicable to modern cloud environments.
+			\item Developed automated document generation system processing 7,000+ customized reports by integrating multiple data sources through Python and SQL, reducing manual processing time by over a month.
+			\item Built comparison tools analyzing 1,400+ job classification documents, identifying and eliminating duplicates that posed legal risks and preventing conflicting classifications across government positions.
+			\item Maintained critical MS Access database serving 20 concurrent users, implementing corruption recovery procedures and ensuring continuous data availability despite frequent network interruptions.
 		\end{cvitems}
 	}
 
