feat(Content): :sparkles: Experience.md completed

--- a/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/experience.tex
+++ b/cv/procurifyJobSeniorBackendEngineerPlatformIntegrations/experience.tex
@@ -8,7 +8,7 @@
 	{2024 --- Present}
 	{
 		\begin{cvitems}
-			\item Eliminated \$300K+ in annual IBM Cognos licensing costs by architecting and implementing DBT-based data platform, providing maintainable, modern solution that feeds critical reporting for government decision makers including courts and legislators throughout the 7-year, \$160M+ court system migration.
+			\item Eliminated \$300K+ in annual IBM Cognos licensing costs by architecting and implementing Python-based DBT data platform, providing maintainable, modern solution that feeds critical reporting for government decision makers including courts and legislators throughout the 7-year, \$160M+ court system migration.
 			\item Optimized Azure cloud infrastructure (Databricks, ADF) through performance tuning and configuration management, reducing data pipeline build times and improving processing efficiency for millions of rows of court data.
 			\item Built analytics system processing judicial data from centralized court reporting systems, serving as the critical data layer that enables government decision-makers to track case flow across 150+ provincial courts.
 			\item Implemented CI/CD with Azure Dev featruing protected main branch, automated testing, and feature-based workflows, reducing senior staff workload while ensuring code quality and safe deployments.
